--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,10 +5,20 @@
 #mongo.data.mongodb.username=admin
 #mongo.data.mongodb.database=dbClient
 #2 Posgrest
-postgre.datasource.url=jdbc:postgresql://localhost/admins
-postgre.datasource.username=postgres
-postgre.datasource.password=
-postgre.datasource.driver-class-name=org.postgresql.Driver
-postgre.jpa.show-sql=false
-postgre.jpa.hibernate.ddl-auto=update
-postgre.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#postgre.datasource.url=jdbc:postgresql://localhost/admins
+#postgre.datasource.username=postgres
+#postgre.datasource.password=
+#postgre.datasource.driver-class-name=org.postgresql.Driver
+#postgre.jpa.show-sql=false
+#postgre.jpa.hibernate.ddl-auto=update
+#postgre.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
