--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -5,10 +5,9 @@
 #mongo.data.mongodb.username=admin
 #mongo.data.mongodb.database=dbClient
 #2 Posgrest
-#postgre.datasource.url=jdbc:postgresql://localhost/postgres
-postgre.datasource.url=jdbc:postgresql://localhost:5432/postgres
+postgre.datasource.url=jdbc:postgresql://localhost/admins
 postgre.datasource.username=postgres
-postgre.datasource.password=1234
+postgre.datasource.password=
 postgre.datasource.driver-class-name=org.postgresql.Driver
 postgre.jpa.show-sql=false
 postgre.jpa.hibernate.ddl-auto=update
