cambio base de datos postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,9 @@
 #mongo.data.mongodb.username=admin
 #mongo.data.mongodb.database=dbClient
 #2 Posgrest
-#postgre.datasource.url=jdbc:postgresql://localhost/postgres
-postgre.datasource.url=jdbc:postgresql://localhost:5432/postgres
-postgre.datasource.username=postgres
-postgre.datasource.password=1234
-postgre.datasource.driver-class-name=org.postgresql.Driver
-postgre.jpa.show-sql=false
-postgre.jpa.hibernate.ddl-auto=update
-postgre.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
