--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,10 @@
 #mongo.data.mongodb.username=admin
 #mongo.data.mongodb.database=dbClient
 #2 Posgrest
-spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
-spring.datasource.username=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
+spring.datasource.url=jdbc:postgresql://204.2.63.19:15360/starmotors
+#spring.datasource.username=postgres
+spring.datasource.username=examen
 spring.datasource.password=1234
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
