--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.datasource.password=1802
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
-spring.data.mongodb.uri=mongodb+srv://mongo:1802@cluster0.wpy6x.mongodb.net/dbClient?retryWrites=true&w=majority
+#spring.data.mongodb.uri=mongodb+srv://mongo:1802@cluster0.wpy6x.mongodb.net/dbClient?retryWrites=true&w=majority
