--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,9 @@
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #postgrest local
-spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
+spring.datasource.url=jdbc:postgresql://localhost:5432/starmotorsPrueba
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=1802
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
