--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #mongo.data.mongodb.username=admin
 #mongo.data.mongodb.database=dbClient
 #2 Posgrest
-spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
-spring.datasource.username=postgres
-spring.datasource.password=1234
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
