--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,17 @@
 #mongo.data.mongodb.username=admin
 #mongo.data.mongodb.database=dbClient
 #postgrest local-->
-spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
-spring.datasource.username=postgres
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
+#spring.datasource.username=postgres
+#spring.datasource.password=1234
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://204.2.63.19:15360/prueba
+spring.datasource.username=examen
+spring.datasource.password=examen
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
