--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -34,9 +34,9 @@ spring.jpa.show-sql=true
 ##spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
-##spring.mail.host=smtp.gmail.com
-##spring.mail.port=587
-##spring.mail.username=<login user to smtp server>
-##spring.mail.password=<login password to smtp server>
-##spring.mail.properties.mail.smtp.auth=true
-##spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<>
+spring.mail.password=<>
+spring.mail.properties.mail.smtp.auth=true 
+spring.mail.properties.mail.smtp.starttls.enable=true
