--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,13 @@
             <artifactId>spring-boot-starter-mail</artifactId>
             <version>2.5.6</version>
         </dependency>
-
+        
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>6.17.0</version>
+		</dependency>
+		
     </dependencies>
 
     <build>
