--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,26 +13,18 @@
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.database=POSTGRESQL
 #spring.jpa.show-sql=true
-spring.datasource.url=jdbc:postgresql://204.2.63.19:15360/prueba
-spring.datasource.username=examen
-spring.datasource.password=examen
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.database=POSTGRESQL
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:postgresql://204.2.63.19:15360/prueba
+#spring.datasource.username=examen
+#spring.datasource.password=examen
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
+#spring.jpa.database=POSTGRESQL
+#spring.jpa.show-sql=true
 
 #postgrest heroku
 
-##spring.jpa.database=POSTGRESQL
-##spring.jpa.show-sql=true
-##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-##spring.datasource.username=postgres
-##spring.datasource.password=admin
-##spring.datasource.driverClassName=org.postgresql.Driver
-##spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-##spring.jpa.properties.hibernate.hbm2ddl.auto=update
-#spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+
 
 ##spring.mail.host=smtp.gmail.com
 ##spring.mail.port=587
