--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,12 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
+#spring.datasource.url=jdbc:postgresql://localhost:5432/starmotorsPrueba1
+#spring.datasource.username=postgres
+#spring.datasource.password=agmr
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 ##spring.jpa.database=POSTGRESQL
 ##spring.jpa.show-sql=true
@@ -39,9 +45,9 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 ##spring.jpa.properties.hibernate.hbm2ddl.auto=update
 #spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 
-##spring.mail.host=smtp.gmail.com
-##spring.mail.port=587
-##spring.mail.username=<login user to smtp server>
-##spring.mail.password=<login password to smtp server>
-##spring.mail.properties.mail.smtp.auth=true
-##spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<login user to smtp server>
+spring.mail.password=<login password to smtp server>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
