--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,9 +40,9 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
-#spring.datasource.url=jdbc:postgresql://localhost:5432/starmotorsPrueba1
+#spring.datasource.url=jdbc:postgresql://localhost:5432/starmotors
 #spring.datasource.username=postgres
-#spring.datasource.password=agmr
+#spring.datasource.password=1234
 #spring.datasource.driverClassName=org.postgresql.Driver
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.properties.hibernate.hbm2ddl.auto=update
